@startuml
!theme plain
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor #F8FAFC
    BorderColor #475569
    ArrowColor #64748B
    FontName "Segoe UI"
    FontSize 12
    AttributeFontName "Consolas"
    AttributeFontSize 11
}

hide circle
show legend

legend right
  |= Color |= Module |
  |<#FFE4E6>| User & Security |
  |<#FEF3C7>| Workspace & Collaboration |
  |<#DCFCE7>| Project & Sprint |
  |<#E0F2FE>| Task & Tag |
  |<#F3E8FF>| Comment & Social |
  |<#FAE8FF>| Workflow & Guidance |
  |<#F1F5F9>| System, Chat & Integration |
endlegend

' =====================================================================
' USER & SECURITY MODULE
' =====================================================================
package "User & Security" as user_module #FFE4E6 {
  entity "users" as users {
    * id : BIGINT <<PK, generated>>
    --
    * email : VARCHAR(255) <<UQ, NOT NULL>>
    * password_hash : VARCHAR(255) <<NOT NULL>>
    full_name : VARCHAR(255)
    is_active : BOOLEAN <<DEFAULT TRUE>>
    avatar_url : TEXT
    phone : VARCHAR(50)
    gender : VARCHAR(20) <<CHECK: MALE, FEMALE, OTHER>>
    dob : DATE
    bio : TEXT
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "user_skills" as user_skills {
    * id : BIGINT <<PK, generated>>
    --
    * user_id : BIGINT <<FK, NOT NULL>>
    * skill_name : VARCHAR(255) <<NOT NULL>>
    level : INT <<CHECK: 1 to 5>>
  }

  entity "team_templates" as team_templates {
    * id : BIGINT <<PK, generated>>
    --
    * owner_id : BIGINT <<FK, NOT NULL>>
    * name : VARCHAR(255) <<NOT NULL>>
    description : TEXT
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }
}

' =====================================================================
' WORKSPACE & COLLABORATION MODULE
' =====================================================================
package "Workspace & Collaboration" as workspace_module #FEF3C7 {
  entity "workspaces" as workspaces {
    * id : BIGINT <<PK, generated>>
    --
    * name : VARCHAR(255) <<NOT NULL>>
    description : TEXT
    * owner_id : BIGINT <<FK, NOT NULL>>
    * is_public : BOOLEAN <<DEFAULT FALSE, NOT NULL>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "workspace_members" as workspace_members {
    * id : BIGINT <<PK, generated>>
    --
    * workspace_id : BIGINT <<FK, NOT NULL>>
    * user_id : BIGINT <<FK, NOT NULL>>
    * role : VARCHAR(100) <<CHECK: OWNER, MANAGER, MEMBER, VIEWER>>
    joined_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "workspace_join_requests" as workspace_join_requests {
    * id : BIGINT <<PK, generated>>
    --
    * workspace_id : BIGINT <<FK, NOT NULL>>
    * user_id : BIGINT <<FK, NOT NULL>>
    * status : VARCHAR(50) <<CHECK: PENDING, APPROVED, REJECTED, CANCELLED>>
    message : TEXT
    reviewed_by : BIGINT <<FK>>
    reviewed_at : TIMESTAMPTZ
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
  }

  entity "workspace_invites" as workspace_invites {
    * id : BIGINT <<PK, generated>>
    --
    * workspace_id : BIGINT <<FK, NOT NULL>>
    * email : VARCHAR(255) <<NOT NULL>>
    * role : VARCHAR(100) <<CHECK: OWNER, MANAGER, MEMBER, VIEWER>>
    * token : VARCHAR(255) <<UQ, NOT NULL>>
    * status : VARCHAR(50) <<CHECK: PENDING, ACCEPTED, EXPIRED, REVOKED>>
    * invited_by : BIGINT <<FK, NOT NULL>>
    * invited_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    * expired_at : TIMESTAMPTZ <<NOT NULL>>
    accepted_at : TIMESTAMPTZ
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }
}

' =====================================================================
' PROJECT & SPRINT MODULE
' =====================================================================
package "Project & Sprint" as project_module #DCFCE7 {
  entity "projects" as projects {
    * id : BIGINT <<PK, generated>>
    --
    * workspace_id : BIGINT <<FK, NOT NULL>>
    * name : VARCHAR(255) <<NOT NULL>>
    description : TEXT
    * status : VARCHAR(100) <<CHECK: ACTIVE, COMPLETED, ARCHIVED, ON_HOLD>>
    start_date : DATE
    end_date : DATE
    source_workflow_id : BIGINT <<FK>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "project_members" as project_members {
    * id : BIGINT <<PK, generated>>
    --
    * project_id : BIGINT <<FK, NOT NULL>>
    * user_id : BIGINT <<FK, NOT NULL>>
    * role : VARCHAR(100) <<CHECK: MANAGER, MEMBER, VIEWER>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "project_join_requests" as project_join_requests {
    * id : BIGINT <<PK, generated>>
    --
    * project_id : BIGINT <<FK, NOT NULL>>
    * user_id : BIGINT <<FK, NOT NULL>>
    * status : VARCHAR(50) <<CHECK: PENDING, APPROVED, REJECTED, CANCELLED>>
    message : TEXT
    reviewed_by : BIGINT <<FK>>
    reviewed_at : TIMESTAMPTZ
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
  }

  entity "sprints" as sprints {
    * id : BIGINT <<PK, generated>>
    --
    * project_id : BIGINT <<FK, NOT NULL>>
    * name : VARCHAR(255) <<NOT NULL>>
    goal : TEXT
    * status : VARCHAR(50) <<CHECK: PLANNING, ACTIVE, COMPLETED, CANCELLED>>
    * start_date : DATE <<NOT NULL>>
    * end_date : DATE <<NOT NULL>>
    * created_by : BIGINT <<FK, NOT NULL>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }
}

' =====================================================================
' TASK & TAG MODULE
' =====================================================================
package "Task & Tag" as task_module #E0F2FE {
  entity "tasks" as tasks {
    * id : BIGINT <<PK, generated>>
    --
    * project_id : BIGINT <<FK, NOT NULL>>
    parent_task_id : BIGINT <<FK>>
    sprint_id : BIGINT <<FK>>
    * title : VARCHAR(255) <<NOT NULL>>
    description : TEXT
    priority : VARCHAR(50) <<CHECK: LOW, MEDIUM, HIGH, URGENT>>
    * status : VARCHAR(50) <<CHECK: TODO, IN_PROGRESS, REVIEW, DONE>>
    start_date : TIMESTAMPTZ
    due_date : TIMESTAMPTZ
    completed_at : TIMESTAMPTZ
    position : INT <<DEFAULT 0>>
    * created_by : BIGINT <<FK, NOT NULL>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "tags" as tags {
    * id : BIGINT <<PK, generated>>
    --
    * project_id : BIGINT <<FK, NOT NULL>>
    * name : VARCHAR(255) <<NOT NULL>>
    color : VARCHAR(50)
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "attachments" as attachments {
    * id : BIGINT <<PK, generated>>
    --
    * task_id : BIGINT <<FK, NOT NULL>>
    * uploader_id : BIGINT <<FK, NOT NULL>>
    * file_url : TEXT <<NOT NULL>>
    file_type : VARCHAR(100)
    file_size : BIGINT
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }
}

' =====================================================================
' COMMENT & SOCIAL MODULE
' =====================================================================
package "Comment & Social" as comment_module #F3E8FF {
  entity "comments" as comments {
    * id : BIGINT <<PK, generated>>
    --
    parent_comment_id : BIGINT <<FK>>
    * task_id : BIGINT <<FK, NOT NULL>>
    * user_id : BIGINT <<FK, NOT NULL>>
    * content : TEXT <<NOT NULL>>
    is_edited : BOOLEAN <<DEFAULT FALSE>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }
}

' =====================================================================
' WORKFLOW & GUIDANCE MODULE
' =====================================================================
package "Workflow & Guidance" as workflow_module #FAE8FF {
  entity "workflows" as workflows {
    * id : BIGINT <<PK, generated>>
    --
    * project_id : BIGINT <<FK, NOT NULL>>
    * created_by : BIGINT <<FK, NOT NULL>>
    * name : VARCHAR(255) <<NOT NULL>>
    description : TEXT
    * status : VARCHAR(50) <<CHECK: DRAFT, PUBLIC>>
    * generation_source : VARCHAR(50) <<CHECK: RULE_BASED, AI_REFINED>>
    * ai_refinement_requested : BOOLEAN <<DEFAULT FALSE>>
    published_at : TIMESTAMPTZ
    * publication_version : INT <<DEFAULT 1>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "workflow_steps" as workflow_steps {
    * id : BIGINT <<PK, generated>>
    --
    * workflow_id : BIGINT <<FK, NOT NULL>>
    * title : VARCHAR(255) <<NOT NULL>>
    description : TEXT
    * position : INT <<DEFAULT 0>>
    * source_type : VARCHAR(50) <<DEFAULT 'RULE'>>
    source_sprint_id : BIGINT <<FK>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "workflow_ratings" as workflow_ratings {
    * id : BIGINT <<PK, generated>>
    --
    * workflow_id : BIGINT <<FK, NOT NULL>>
    * user_id : BIGINT <<FK, NOT NULL>>
    * stars : INT <<CHECK: 1 to 5>>
    review_text : TEXT
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
  }

  entity "workflow_favorites" as workflow_favorites {
    * id : BIGINT <<PK, generated>>
    --
    * workflow_id : BIGINT <<FK, NOT NULL>>
    * user_id : BIGINT <<FK, NOT NULL>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
  }

  entity "workflow_comments" as workflow_comments {
    * id : BIGINT <<PK, generated>>
    --
    parent_comment_id : BIGINT <<FK>>
    * workflow_id : BIGINT <<FK, NOT NULL>>
    * user_id : BIGINT <<FK, NOT NULL>>
    * content : TEXT <<NOT NULL>>
    is_edited : BOOLEAN <<DEFAULT FALSE>>
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "workflow_guidance" as workflow_guidance {
    * id : BIGINT <<PK, generated>>
    --
    * workflow_id : BIGINT <<FK, NOT NULL>>
    * publication_version : INT <<NOT NULL>>
    * raw_json : JSONB <<NOT NULL>>
    summary_json : JSONB
    generated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    * is_user_edited : BOOLEAN <<DEFAULT FALSE>>
    edited_by : BIGINT <<FK>>
  }

  entity "project_guidance_progress" as project_guidance_progress {
    * id : BIGINT <<PK, generated>>
    --
    * project_id : BIGINT <<FK, UQ, NOT NULL>>
    * workflow_guidance_id : BIGINT <<FK, NOT NULL>>
    current_step_id : VARCHAR(255)
    * is_active : BOOLEAN <<DEFAULT TRUE>>
    started_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
  }

  entity "project_guidance_target" as project_guidance_target {
    * id : BIGINT <<PK, generated>>
    --
    * progress_id : BIGINT <<FK, NOT NULL>>
    * step_id : VARCHAR(255) <<NOT NULL>>
    * target_type : VARCHAR(255) <<NOT NULL>>
    * required_count : INT <<DEFAULT 1>>
    * current_count : INT <<DEFAULT 0>>
    target_metadata : JSONB
    * is_completed : BOOLEAN <<DEFAULT FALSE>>
  }
}

' =====================================================================
' SYSTEM, CHAT & INTEGRATION MODULE
' =====================================================================
package "System, Chat & Integration" as system_module #F1F5F9 {
  entity "notifications" as notifications {
    * id : BIGINT <<PK, generated>>
    --
    * receiver_id : BIGINT <<FK, NOT NULL>>
    actor_id : BIGINT
    * type : VARCHAR(50) <<NOT NULL>>
    reference_type : VARCHAR(50)
    reference_id : BIGINT
    payload : JSONB
    read_at : TIMESTAMPTZ
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
  }

  entity "chat_sessions" as chat_sessions {
    * id : BIGINT <<PK, generated>>
    --
    * user_id : BIGINT <<FK, NOT NULL>>
    title : VARCHAR(255)
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    updated_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
    deleted_at : TIMESTAMPTZ
  }

  entity "chat_messages" as chat_messages {
    * id : BIGINT <<PK, generated>>
    --
    * session_id : BIGINT <<FK, NOT NULL>>
    * role : VARCHAR(20) <<CHECK: USER, ASSISTANT>>
    * content : TEXT <<NOT NULL>>
    context : JSONB
    sources : JSONB
    created_at : TIMESTAMPTZ <<DEFAULT CURRENT_TIMESTAMP>>
  }
}

' =====================================================================
' RELATIONSHIPS (Logical crow's foot notation)
' =====================================================================
users ||--o{ user_skills : "has skills"
users ||--o{ team_templates : "owns team templates"
team_templates }o--o{ users : "includes members"

users ||--o{ workspaces : "owns workspaces"
workspaces ||--o{ workspace_members : "contains"
users ||--o{ workspace_members : "joined as member"
workspaces ||--o{ workspace_join_requests : "receives requests"
users ||--o{ workspace_join_requests : "submits join request"
users |o--o{ workspace_join_requests : "reviews join request"
workspaces ||--o{ workspace_invites : "sends invites"
users ||--o{ workspace_invites : "created invite"

workspaces ||--o{ projects : "contains projects"
projects ||--o{ project_members : "contains"
users ||--o{ project_members : "joined as member"
projects ||--o{ project_join_requests : "receives requests"
users ||--o{ project_join_requests : "submits join request"
users |o--o{ project_join_requests : "reviews join request"
projects ||--o{ sprints : "sprints configured"
users ||--o{ sprints : "sprint created by"

projects ||--o{ tasks : "has tasks"
tasks |o--o{ tasks : "parent of subtask"
sprints |o--o{ tasks : "assigned in sprint"
users ||--o{ tasks : "created task"
tasks }o--o{ users : "assigned to"
projects ||--o{ tags : "defines tags"
tasks }o--o{ tags : "tagged with"
tasks ||--o{ attachments : "has attachments"
users ||--o{ attachments : "uploaded attachment"

tasks ||--o{ comments : "has discussion comments"
users ||--o{ comments : "authored comment"
comments |o--o{ comments : "reply to comment"
comments }o--o{ users : "mentions user"
comments }o--o{ users : "reacted by"

projects ||--o{ workflows : "references source project"
workflows |o--o{ projects : "source workflow for project"
users ||--o{ workflows : "created workflow"
workflows ||--o{ workflow_steps : "contains steps"
sprints |o--o{ workflow_steps : "linked to source sprint"
workflow_steps }o--o{ tasks : "maps task templates"
workflows ||--o{ workflow_ratings : "receives ratings"
users ||--o{ workflow_ratings : "rated by user"
workflows ||--o{ workflow_favorites : "favorited by"
users ||--o{ workflow_favorites : "favorited workflow"
workflows ||--o{ workflow_comments : "has comments"
users ||--o{ workflow_comments : "authored workflow comment"
workflow_comments |o--o{ workflow_comments : "reply to comment"
workflow_comments }o--o{ users : "mentions user"
workflow_comments }o--o{ users : "reacted by"
workflows ||--o{ workflow_guidance : "generates guidance spec"
users |o--o{ workflow_guidance : "manually edited by"

projects ||--o| project_guidance_progress : "has guidance tracker"
workflow_guidance ||--o{ project_guidance_progress : "drives progress"
project_guidance_progress ||--o{ project_guidance_target : "tracks target goals"

users ||--o{ notifications : "receives notifications"
users ||--o{ chat_sessions : "starts session"
chat_sessions ||--o{ chat_messages : "contains messages"
@enduml
